[project]
name = "nerva-py"
version = "1.1.0"
description = "Python bindings for the JSON RPC interface of the Nerva (XNV) cryptocurrency."
license = "MIT"
authors = [
  { name="Sayan Bhattacharyya", email="sayan@sn1f3rt.dev" },
]
readme = "README.md"
requires-python = ">=3.10"
homepage = "https://github.com/sn1f3rt/nerva-py"
repository = "https://github.com/sn1f3rt/nerva-py"
documentation = "https://github.com/sn1f3rt/nerva-py?tab=readme-ov-file#documentation"
keywords = ["nerva", "cryptocurrency", "json-rpc", "bindings", "python"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "httpx==0.28.1",
]

[dependency-groups]
dev = [
    "pre-commit==4.5.1",
    "ruff==0.14.14",
]

[tool.hatch.build.targets.wheel]
packages = ["nerva"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 85
target-version = "py313"

[tool.ruff.lint.isort]
section-order = ["future", "typing", "standard-library", "third-party", "first-party", "local-folder"]
force-wrap-aliases = true
combine-as-imports = true
length-sort = true

[tool.ruff.lint.isort.sections]
"typing" = ["typing"]
